# paper_digest_pro

./: .env.example  .gitignore  README.md  paper-distill-pro-说明书.md  pyproject.toml
.github/workflows/: ci.yml  daily-digest.yml  publish.yml
src/paper_distill_pro/: __init__.py  config.py  models.py  server.py
src/paper_distill_pro/fulltext/: __init__.py  fetcher.py  parser.py  sub_agent.py
src/paper_distill_pro/push/: __init__.py  digest.py  dispatcher.py  scheduler.py
src/paper_distill_pro/push/channels/: __init__.py  email.py  feishu.py  slack.py  telegram.py  wecom.py
src/paper_distill_pro/search/: __init__.py  dedup.py  engine.py
src/paper_distill_pro/search/sources/: __init__.py  arxiv.py  base.py  openalex.py  other.py  premium.py  semantic_scholar.py
src/paper_distill_pro/sync/: __init__.py  mendeley.py  notion.py  obsidian.py  zotero.py
tests/: conftest.py  test_smoke.py
