[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperdistillpro"
version = "1.0.0"
description = "MCP server for academic paper search (11 sources), full-text parsing, bidirectional sync, and multi-platform push"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "academic", "papers", "research", "arxiv", "zotero", "mendeley"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.24.0",
    "python-dateutil>=2.9.0",
    "jinja2>=3.1.0",
    "aiosmtplib>=3.0.0",
    "tenacity>=8.0.0",
    "rich>=13.0.0",
    "authlib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
paper-distill-pro   = "paper_distill_pro.server:main"
paper-distill-push  = "paper_distill_pro.push.scheduler:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_distill_pro"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
